--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,6 @@ select {
 
 .flow > *:where(:not(:first-child)) {
   margin-top: var(--flow-space);
-  outline: 1px solid red;
 }
 
 /* For Assistive technology */
@@ -222,4 +221,78 @@ select {
 .large-button:focus::after{
   opacity: 1;
   transform: scale(1.75);
+}
+
+
+
+.primary-navigation {
+  --gap: 8rem;
+  --underline-gap: 2rem;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.primary-navigation a {
+  text-decoration: none;
+}
+
+.primary-navigation a > span {
+  font-weight: 700;
+  margin-right: .5em;
+}
+
+.underline-indicators > * {
+  padding: var(--underline-gap, 1rem) 0;
+  border-bottom: .2rem solid hsl( var(--clr-white) / 0 );
+}
+
+.underline-indicators > *:hover,
+.underline-indicators > *:focus {
+  border-color: hsl( var(--clr-white) / .25);
+}
+.underline-indicators > .active,
+.underline-indicators > [aria-selected="true"] {
+    color: hsl( var(--clr-white) / 1);
+    border-color: hsl( var(--clr-white) / 1);
+}
+
+.tab-list {
+    --gap: 2rem;
+}
+
+.dot-indicators > * {
+  cursor: pointer;
+  border: 0;
+  border-radius: 50%;
+  padding: .5em;
+  background-color: hsl( var(--clr-white) / .25);
+}
+
+.dot-indicators > *:hover,
+.dot-indicators > *:focus {
+  background-color: hsl( var(--clr-white) / .5);
+}
+
+.dot-indicators > [aria-selected="true"] {
+  background-color: hsl( var(--clr-white) / 1); 
+}
+
+.numbers-indicator *{
+  display: grid;
+  place-items: center;
+  padding:  0 0.75em;
+  border: 0.1px solid hsl( var(--clr-white) /0.2);
+  background-color: hsl( var(--clr-dark) );
+  border-radius: 50%;
+  aspect-ratio: 1;
+}
+.numbers-indicator button:hover{
+ 
+  border: 0.1px solid hsl( var(--clr-white) /0.8);
+}
+
+.numbers-indicator [aria-selected="true"]{
+ color: hsl( var(--clr-dark) );
+  background-color: hsl( var(--clr-white) );
 }
