--- a/src/App.css
+++ b/src/App.css
@@ -342,11 +342,13 @@ select {
   top: 0;
   right: 0;
   height: 100%;
-  width: 250px;
+  /* width: 250px; */
+  width: 75%;
   background-color: hsl(var(--clr-dark)/ 0.2);
   -webkit-backdrop-filter: blur(7px);
   backdrop-filter: blur(7px);
   padding: 2rem;
+  padding-left: 20%;
   display: flex;
   flex-direction: column;
   align-items: start;
